--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
 	"dependencies": {
 		"@babel/runtime": "^7.10.4",
+		"bcrypt": "^4.0.0",
 		"ibm-watson": "^5.6.0",
-		"bcrypt": "^4.0.0"
+		"request": "^2.88.2"
 	},
 	"scripts": {
 		"start": "MONGO_URL=mongodb+srv://daoadmin:daoadminpassword@cluster1-etul3.mongodb.net/daodb  meteor --settings settings.json --port $IP:$PORT",
