--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
 		"@babel/runtime": "^7.10.4",
 		"bcrypt": "^4.0.0",
 		"ibm-watson": "^5.6.0",
-		"request": "^2.88.2"
+		"request": "^2.88.2",
+		"request-promise": "^4.2.6"
 	},
 	"scripts": {
 		"start": "MONGO_URL=mongodb+srv://daoadmin:daoadminpassword@cluster1-etul3.mongodb.net/daodb  meteor --settings settings.json --port $IP:$PORT",
