--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
  "name": "dao",
  "short_name": "dao",
- "description": "wei wu wei",
+ "description": "Reddit and StackExchange Aggregator",
  "background_color": "black",
  "theme_color": "black",
  "start_url": "/",
