--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"dependencies": {
-		"@babel/runtime": "^7.10.4"
+		"@babel/runtime": "^7.10.4",
+		"ibm-watson": "^5.6.0"
 	},
 	"scripts": {
 		"start": "MONGO_URL=mongodb+srv://daoadmin:daoadminpassword@cluster1-etul3.mongodb.net/daodb  meteor --settings settings.json --port $IP:$PORT",
