--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 		"@babel/runtime": "^7.10.4",
 		"bcrypt": "^5.0.0",
 		"ibm-watson": "^5.6.0",
+		"node-mailjet": "^3.3.1",
 		"request": "^2.88.2",
 		"request-promise": "^4.2.6"
 	},
