--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"dependencies": {
 		"@babel/runtime": "^7.10.4",
 		"request": "^2.88.2",
+		"ibm-watson": "^5.6.0",
 		"request-promise": "^4.2.6"
 	},
 	"scripts": {
